Updates webpack-dev-server to release 3.1.14; Disables Turbolinks; Updating Capistrano and SSHKit (please see https://github.com/nov/json-jwt/issues/45 for the error which is raised); Removing the npm_install tasks for staging deployments; Fixing the overflow issue in the navbar header for collection titles; Ensuring that the JavaScript packs are loaded first

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -27,6 +27,7 @@ header.lux {
         line-height: 36px;
         font-family: "Source Sans Pro", "DejaVu", "HelveticaNeue", Arial, sans-serif;
         border-left-color: #746d54;
+        width: 100%;
       }
     }
   }
